# NoteKo

./: .gitignore  README.md
backend/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 51527a4d0e1b_create_users_table.py  820600eca4cc_create_user_table.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py
backend/app/auth/: jwt.py
backend/app/core/: config.py  health.py  metadata.py
backend/app/db/: database.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  token.py  user.py
backend/app/security/: __init__.py  dependencies.py  middleware.py  password.py  token.py
backend/docs/: metadata.json
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  docker-compose.yml  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  main.jsx
frontend/src/components/auth/: LoginForm.jsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.jsx  RegisterForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/auth/: LoginPage.jsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: authService.ts
frontend/src/types/: auth.ts
