[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noteko"
version = "0.1.0"
authors = [
  { name="NoteKo Team" },
]
description = "A personal note-taking application"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
